--- a/index.html
+++ b/index.html
@@ -11,15 +11,58 @@
   <title>Document</title>
 </head>
 <body>
-  <!--header-->
-
+<!-- header -->
 <header>
-<div class=" topbar">
+  <input type="checkbox" id="menu-bar">
+  <label for="menu-bar">
+    <i class="fa-solid fa-bars"></i> </label>
+    <div class="head">
+      <div class="topnar">
+        <ul>
+          <li><a href="#"> <span>|</span> العربية-ر.س</a></li>
+          <li><a href="#"> <span>|</span>  المفضلة </a></li>
+          <li><a href="#"> <span>|</span> سياسية الاستبدال والاسترجاع  </a></li>
+          <li><a href="#">تواصل معنا</a></li>
+        </ul>
+        </div>
+      <div class="navbar">
+        <div class="span">
+         <span><i class="fa-regular fa-envelope"></i>support@salla.sa</span>
+         <span><i class="fa-solid fa-phone"></i> +1 718-999-3939</span>
+         </div>
+      </div>
+    </div>  
+    <div class="head1">
+      <div class="topnar">
+        <ul>
+          <li><i class="fa-solid fa-magnifying-glass"></i></li>
+          <li><i class="fa-regular fa-heart"></i></li>
+          <li><i class="fa-solid fa-bag-shopping"></i></li>
+          <li><i class="fa-regular fa-user"></i></li>
 
-</div>
-
-
+        </ul>
+        </div>
+      <nav>
+        <ul>
+          <li class="activ"><a href="#">الرئيسية</a></li>
+          <li ><a href="#"> <i class="fa-solid fa-chevron-down"></i>الأقسام</a></li>
+          <li ><a href="#"><i class="fa-solid fa-chevron-down"></i>الأكثر مبيعاً</a></li>
+          <li ><a href="#"><i class="fa-solid fa-chevron-down"></i>التخفيضات</a></li>
+        </ul>
+      
+      </nav>
+      <div class="topnar">
+        <ul>
+          <li> متجر سلة <i class="fa-solid fa-cart-shopping"></i> </li>
+  
+        </ul>
+        </div>
+    </div>
+  
 </header>
+
+
+
   <!--end-header-->
   <!--section1-->
 <section class="mainbanner">
@@ -286,7 +329,7 @@
     <div class="container">
       <div class="titlee">
        <div>
-        <a class="all" href="#" > <i class="fa-solid fa-chevron-left"></i>عرض الكل </a>
+        <a class="alll" href="#" > <i class="fa-solid fa-chevron-left"></i>عرض الكل </a>
         <img src="/images/Rectangle 4648 (3).png" alt="" srcset="">
        </div>
        <div>
@@ -355,6 +398,7 @@
       </div>
     </section>
   <!--end section8 -->
+
 
 
 
